--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,5 +3,12 @@
 @import "fonts";
 @import "global";
 
+.header{
+    min-height: 100vh;
+    // width: 100vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+}
 
 @import "media";
