--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,12 +3,97 @@
 @import "fonts";
 @import "global";
 
+// HEADER SECTION
 .header{
     min-height: 100vh;
-    // width: 100vw;
+    width: 100vw;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
+    position: relative;
+    padding: 30px 0;
+    &__top{
+        position: fixed;
+        z-index: 10;
+        left: 0;
+        right: 0;
+        top: 30px;
+        min-height: 31px;
+    }
+    .menu{
+        &__list{
+            @extend %ubuntu-medium;
+            @include menu-style;
+            color: $txt-color;
+            .menu__list-item {
+                padding-left: 20px;
+                a {
+                    color: $txt-color;
+                }
+            } 
+        }
+    }
+    &__order{
+        .btn{
+            @extend %btn;
+            @include menu-style;
+            padding: 6px 28px;
+        }
+        a{
+            color: $txt-color;
+            padding-left: 8px;
+            font-size: 16px;
+            line-height: 18px;
+            @extend %ubuntu-bold;
+        }
+    }
+    &__content{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        .header__title{
+            margin-bottom: 25px;
+        }
+        .header__img{
+            margin-bottom: 25px;
+        }
+        .header__txt{
+            margin-bottom: 35px;
+            @extend %ubuntu-light;
+            font-size: 17px;
+            line-height: 25px;
+            text-align: center;
+            max-width: 325px;
+        }
+        .social-list{
+            flex-direction: row;
+            li a{
+                padding-left: 50px;
+            }
+            .social-list-item > a{
+                @extend %socials-hover;
+            }
+        }
+    }
+}
+
+
+// BENEFIT SECTION
+.benefit__num{
+    font-style: normal;
+    @extend %ubuntu-bold;
+    font-size: 36px;
+    line-height: 41px;
+}
+// CONTACT SECTION
+.social-list{
+    flex-direction: column;
+    li a{
+        padding-left: 28px;
+    }
+    .social-list-item > a{
+        @extend %socials-hover;
+    }
 }
 
 @import "media";
