--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -44,7 +44,12 @@ $txt-color: #fff;
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 3px;
+    transition: all .3s;
     cursor: pointer;
+    &:hover{
+        background-color: rgb(255, 255, 255);
+        color: #000;
+    }
 }
 %socials-hover{
     opacity: 0.5;
