--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,21 +5,12 @@
 
 // HEADER SECTION
 .header{
-    min-height: 100vh;
-    width: 100vw;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    position: relative;
-    padding: 30px 0;
-    &__top{
-        position: fixed;
-        z-index: 10;
-        left: 0;
-        right: 0;
-        top: 30px;
-        min-height: 31px;
-    }
+    position: fixed;
+    z-index: 10;
+    top: 30px;
+    right: 0;
+    left: 0;
+    min-height: 31px;
     .menu{
         &__list{
             @extend %ubuntu-medium;
@@ -46,47 +37,194 @@
             line-height: 18px;
             @extend %ubuntu-bold;
         }
+    } 
+}
+.top{
+    min-height: 100vh;
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+    padding: 30px 0 40px;
+    align-items: flex-end;
+    position: relative;
+    &::before{
+        content: '';
+        background: radial-gradient(45.97% 54.43% at 50% 45.57%, rgba(23, 26, 28, 0) 50.28%, rgba(23, 26, 28, 0.00225974) 50.29%, rgba(4, 5, 5, 0.820343) 58.72%, rgba(5, 5, 6, 0.792703) 80.08%, #000000 87.89%);
+        opacity: 0.4;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        top: 0;
+    }
+    .container{
+        z-index: 1;
     }
     &__content{
         flex-direction: column;
         text-align: center;
         align-items: center;
-        .header__title{
+           
+        .top__title{
             margin-bottom: 25px;
         }
-        .header__img{
-            margin-bottom: 25px;
+    }
+    &__img{
+        margin-bottom: 25px;
+    }
+    &__txt{
+        margin-bottom: 35px;
+        @extend %ubuntu-light;
+        font-size: 17px;
+        line-height: 25px;
+        text-align: center;
+        max-width: 325px;
+    }
+    .social-list{
+        flex-direction: row;
+        margin-bottom: 13px;
+        li{
+            margin-right: 25px;
+            margin-left: 25px;
         }
-        .header__txt{
-            margin-bottom: 35px;
-            @extend %ubuntu-light;
-            font-size: 17px;
-            line-height: 25px;
-            text-align: center;
-            max-width: 325px;
+        .social-list-item > a{
+            @extend %socials-hover;
         }
-        .social-list{
-            flex-direction: row;
-            li a{
-                padding-left: 50px;
+    }
+}
+// ABOUT SECTION
+.about{
+    &__txt{
+        max-width: 440px;
+        margin-left: 56px;
+        p {
+            margin-bottom: 30px;
+            margin-top: 0;
+        }
+    }
+    &__slider-box{
+        position: relative;
+        padding-top: 110px;
+        p{
+            @extend %ubuntu-medium;
+            font-size: 24px;
+            line-height: 28px;
+            text-align: right;
+            width: 281px;
+            position: absolute;
+            left: -150px;
+            bottom: 30px;
+            z-index: 5;
+        }
+    }
+    &__slider{
+        max-width: 560px;
+        &::before{
+            content: '';
+            position: absolute;
+            top: -15px;
+            right: -13px;
+            width: 560px;
+            height: 280px;
+            border: 4px solid #fff;
+        }
+    }
+    .slider-btn{
+        width: 60px;
+        height: 48px;
+        background-color: #fff;
+        border: 1px solid #1c1c1c;
+        position: absolute;
+        bottom: -48px;
+        right: 0;
+        cursor: pointer;
+        &__left{
+            right: 60px;
+            position: absolute;
+            z-index: 3;
+        }
+        svg{
+            stroke: #1c1c1c;
+        }
+    }
+    .slick-disabled{
+        background-color: #1c1c1c;
+        svg{
+           stroke: #fff;
+        }
+    }
+}
+// BENEFIT SECTION
+.benefit{
+    &__title{
+        margin-bottom: 55px;
+    }
+    &__items{
+        flex-wrap: wrap;
+        justify-content: space-between;
+        .benefit__num{
+            font-style: normal;
+            @extend %ubuntu-bold;
+            font-size: 36px;
+            line-height: 41px;
+            margin-right: 10px;
+        }
+        .benefit__item{
+            z-index: 1;
+            display: flex;
+            align-items: flex-end;
+            margin-bottom: 100px;
+            margin-left: 32px;
+            margin-top: -8px;
+            &::nth-child(even){
+                margin-left: 40px;
             }
-            .social-list-item > a{
-                @extend %socials-hover;
+           
+        }
+        .benefit__item-1{
+            position: relative;
+            &:before{
+                content: '';
+                position: absolute;
+                width: 245px;
+                height: 45px;
+                background-image: url(../images/wave-1.svg);
+                background-repeat: no-repeat;
+                background-position: 0 0;
+                top: 30px;
+                right: -60px;
             }
+        }
+        .benefit__img{
+            position: relative;
+            margin-right: 32px;
+            &::before{
+                content: '';
+                position: absolute;
+                top: -12px;
+                left: 12px;
+                width: 195px;
+                height: 130px;
+                border: 2px solid #fff;
+                z-index: -1;
+            }
+        }
+    }
+    &__info{
+        width: 300px;
+        .info-title{
+            max-width: 137px;
+            margin-bottom: 10px;
+        }
+        .info-txt{
+            font-size: 15px;
+            line-height: 18px;
         }
     }
 }
 
-
-// BENEFIT SECTION
-.benefit__num{
-    font-style: normal;
-    @extend %ubuntu-bold;
-    font-size: 36px;
-    line-height: 41px;
-}
 // CONTACT SECTION
-.social-list{
+.contact .social-list{
     flex-direction: column;
     li a{
         padding-left: 28px;
