added property section

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -4,6 +4,7 @@ html{
     -webkit-scroll-behavior: smooth;
     -ms-scroll-behavior: smooth;
     -moz-scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 *,
 *::before, 
