added accordion, form and contact section

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,9 +1,9 @@
 html{
     box-sizing: border-box;
-    scroll-behavior: smooth;
-    -webkit-scroll-behavior: smooth;
-    -ms-scroll-behavior: smooth;
-    -moz-scroll-behavior: smooth;
+    // scroll-behavior: smooth;
+    // -webkit-scroll-behavior: smooth;
+    // -ms-scroll-behavior: smooth;
+    // -moz-scroll-behavior: smooth;
     overflow-x: hidden;
 }
 *,
