--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -46,13 +46,14 @@ $txt-color: #fff;
     border-radius: 3px;
     transition: all .3s;
     cursor: pointer;
+    color: #fff;
     &:hover{
         background-color: rgb(255, 255, 255);
         color: #000;
     }
 }
 %socials-hover{
-    opacity: 0.5;
+    opacity: 0.7;
     transition: all .3s;
     &:hover{
         opacity: 1;
@@ -65,5 +66,12 @@ $txt-color: #fff;
         position: absolute;
         background-repeat: no-repeat;
         background-position: 0 0;
+    }
+}
+@mixin form{
+    &::placeholder{
+        font-size: 13px;
+        color: rgba(#fff, .4);
+        line-height: 17px;
     }
 }
