--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,6 +28,7 @@ body{
 a{
     display: inline-block;
     text-decoration: none;
+    color: #333;
 }
 ul,li{
     display: inline-block;
@@ -108,24 +109,9 @@ button:not(:disabled) {
 .content{
     flex: 1 0 auto;
 }
+
 .page-section{
-    min-height: 100vh;
-    width: 100vw;
-    background-image: url('../images/main-bg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: top center;
-    position: relative;
-    padding: 150px 0 30px;
-    &:before{
-        background: linear-gradient(119.35deg, rgba(23, 26, 28, 0.72) 0%, #5E5E57 100%);
-        opacity: 0.15;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        top: 0;
-    }
+    background-color: #556b77;
 }
 .footer{
     flex: 0 0 auto; 
@@ -141,4 +127,7 @@ button:not(:disabled) {
     bottom: 0;
     padding: 13px 0 30px 0;
     text-align: center;
+}
+.menu__btn{
+    display: none;
 }
